# baypy

./: .gitignore  .readthedocs.yaml  README.md  README.rst  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codecov.yml  linux_test.yml  linux_tests.yml  macos_test.yml  macos_tests.yml  release.yml  tests.yml  windows_test.yml
GibbsSampler/: GibbsSampler.py  __init__.py  functions.py  model.py  regression.py  utils.py
GibbsSampler/analysis/: __init__.py  functions.py
GibbsSampler/diagnostics/: functions.py
GibbsSampler/model/: linear_model.py  model.py
GibbsSampler/regression/: __init__.py  functions.py  linear_regression.py  regression.py
baypy/: __init__.py  utils.py
baypy/analysis/: __init__.py  compute_DIC.py  functions.py  residuals_plot.py  summary.py  trace_plot.py
baypy/diagnostics/: __init__.py  _functions.py  autocorrelation_plot.py  autocorrelation_summary.py  effective_sample_size.py  functions.py
baypy/model/: __init__.py  linear_model.py  model.py
baypy/regression/: __init__.py  functions.py  linear_regression.py  regression.py
docs/source/: baypy.analysis.functions.summary.rst  baypy.analysis.functions.trace_plot.rst  baypy.analysis.rst  baypy.diagnostics.functions.autocorrelation_plot.rst  baypy.diagnostics.functions.autocorrelation_summary.rst  baypy.diagnostics.functions.effective_sample_size.rst  baypy.diagnostics.rst  baypy.model.linear_model.LinearModel.residuals.rst  baypy.model.linear_model.LinearModel.response_variable.rst  baypy.model.linear_model.LinearModel.rst  baypy.model.linear_model.LinearModel.variable_names.rst  baypy.model.rst  baypy.regression.functions.sample_beta.rst  baypy.regression.linear_regression.LinearRegression.rst  baypy.regression.linear_regression.LinearRegression.sample.rst  baypy.regression.rst  baypy.rst  conf.py  get_started.rst  index.rst  installation.md  license.rst  quickstart.rst  requirements.txt
docs/source/_static/: custom.css
docs/source/analysis/: compute_DIC.rst  index.rst  residuals_plot.rst  summary.rst  trace_plot.rst
docs/source/diagnostics/: autocorrelation_plot.rst  autocorrelation_summary.rst  effective_sample_size.rst  index.rst
docs/source/examples/: index.rst
docs/source/examples/auto_mpg/: README.md  auto_mpg.py  index.rst
docs/source/examples/heart/: README.md  heart.py  index.rst
docs/source/examples/real_estate/: README.md  index.rst  (+1 more)
docs/source/model/: index.rst
docs/source/regression/: index.rst  sample_sigma2.rst
docs/source/release_notes/: index.rst  release_1_0_0.rst  release_1_0_2.rst  release_1_0_3.rst  release_1_0_4.rst  release_1_1_0.rst  release_1_1_1.rst  release_1_1_2.rst  release_1_2_0.rst  release_1_2_1.rst  release_1_3_0.rst  release_1_4_0.rst  release_1_4_1.rst
examples/auto_mpg/: README.md  auto_mpg.py
examples/auto_mpg/data/: data.csv
examples/heart/: README.md  data.csv  heart.py
examples/real_estate/: README.md  real_estate.py
examples/salary/: README.md  salary.py
examples/tvmarketing/: README.md  tvmarketing.py
requirements/: common.txt  dev.txt  docs.txt  tests.txt
tests/: conftest.py  test_analysis.py  test_diagnostics.py  test_model.py  test_regression.py  test_sampling.py  test_utils.py
tests/test_analysis/: conftest.py  test_analysis.py
tests/test_diagnostics/: conftest.py  test_diagnostics.py
tests/test_model/: conftest.py  test_model.py
tests/test_regression/: conftest.py  test_regression.py
tests/test_utils/: conftest.py  test_utils.py
(+21 files in other folders)
