[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "baypy"
dynamic = ["version"]
requires-python = ">=3.9,<3.13"
dependencies = [
  "matplotlib==3.7.2",
  "numpy==1.26.1",
  "pandas==2.0.3",
  "scipy==1.11.3",
]
authors = [
  {name = "Andrea Blengino", email = "ing.andrea.blengino@protonmail.com"},
]
maintainers = [
  {name = "Andrea Blengino", email = "ing.andrea.blengino@protonmail.com"},
]
description = "Python library for solving bayesian regression models through a Monte Carlo Markov chain sampling"
readme = "README.rst"
license = { file = "LICENSE" }
classifiers = [
  "Intended Audience :: Education",
  "Intended Audience :: Manufacturing",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Mathematics"
]


[project.optional-dependencies]
doc = [
  "furo==2023.8.19",
  "m2r2==0.3.3.post2",
  "sphinx==7.2.6"
]
test = [
  "coverage==7.3.2",
  "hypothesis==6.88.3",
  "pytest==7.4.3",
  "pytest-cov==4.1.0",
  "pytest-xdist==3.3.1",
]

[tool.setuptools.packages.find]
include = ["baypy", "baypy.*"]

[project.urls]
Homepage = "https://github.com/AndreaBlengino/baypy"
Documentation = "https://baypy.readthedocs.io/en/latest/index.html"
Issues = "https://github.com/AndreaBlengino/baypy/issues"
Repository = "https://github.com/AndreaBlengino/baypy"
