[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "baypy"
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.6,!=3.9.1",
  "numpy>=1.20",
  "pandas>=2.0",
  "scipy>=1.6,!=1.11.0,!=1.14.0rc1",
]
authors = [
  {name = "Andrea Blengino", email = "ing.andrea.blengino@protonmail.com"},
]
maintainers = [
  {name = "Andrea Blengino", email = "ing.andrea.blengino@protonmail.com"},
]
description = "Python library for solving bayesian regression models through a Monte Carlo Markov chain sampling"
readme = "README.rst"
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Education",
  "Intended Audience :: Manufacturing",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Mathematics"
]


[project.optional-dependencies]
doc = [
  "furo==2024.8.6",
  "m2r2==0.3.3.post2",
  "sphinx==8.1.3",
  "sphinx-copybutton==0.5.2",
  "docutils==0.20.1"
]
test = [
  "coverage==7.6.3",
  "hypothesis==6.112.1",
  "pytest==8.3.3",
  "pytest-cov==5.0.0",
  "pytest-xdist==3.6.1",
]

[tool.setuptools.packages.find]
include = ["baypy", "baypy.*"]

[project.urls]
Homepage = "https://github.com/AndreaBlengino/baypy"
Documentation = "https://baypy.readthedocs.io/en/latest/index.html"
Issues = "https://github.com/AndreaBlengino/baypy/issues"
Repository = "https://github.com/AndreaBlengino/baypy"
